--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 </head>
 <body>
 
-<h1>🔥 Clicker Game 🔥</h1>
+<h1> Clicker Game </h1>
 <h2>Points: <span id="points">0</span></h2>
 <h3>Auto-clickers: <span id="autoClickers">0</span> | Click multipliers: <span id="clickMultipliers">0</span></h3>
 
@@ -209,3 +209,4 @@ updateDisplay();
 </script>
 </body>
 </html>
+
